--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,4 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:800');
+
 header {
-    padding-top: 8%;
+    height: 400px;
+    padding-top: 9%;
+    margin-top: 50px;
     padding-bottom: 5%;
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+    font-weight: bold;
+    background-image: url('../../Images/farmersmarket.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
 }
