--- a/src/Components/InfoSection/InfoSection.css
+++ b/src/Components/InfoSection/InfoSection.css
@@ -1,7 +1,29 @@
+@import url('https://fonts.googleapis.com/css?family=Noto+Serif+JP');
+
 footer{
   position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
   background:#ccc;
+}
+
+p, .consumer-how-page li{
+  font-family: 'Noto Serif JP', serif;
+}
+
+.consumer-how-page li{
+  list-style: none;
+  font-size: 15px;
+}
+
+.why-page h1{
+  text-align: center;
+}
+
+.why-page, .consumer-how-page{
+  margin-top: 20%;
+  padding-left: 30px;
+  padding-right: 30px;
+  text-align: left;
 }
