--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Josefin+Sans:100');
+@import url('https://fonts.googleapis.com/css?family=Noto+Serif+JP');
+
 nav {
   display: flex;
   justify-content: space-between;
@@ -14,7 +17,8 @@ nav {
 }
 
 .nav-link{
-  margin-top: 1.5%;
+  margin-top: 2.5%;
+  margin-left: 2%;
 }
 
 .dropdown {
@@ -38,11 +42,12 @@ nav {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
+  min-width: 180px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  border-radius: 5px 5px 5px 5px;
   z-index: 1;
   right: 10px;
-  padding: 10px 10px;
+  padding: 20px 20px;
   font-size: 13px;
   line-height: 30px;
 }
@@ -54,4 +59,21 @@ nav {
 .dropdown:hover .dropdown-content {
   display: block;
   text-align: left;
+  line-height: 45px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+  font-family: 'Noto Serif JP', serif;
+}
+
+.home a{
+  font-family: 'Josefin Sans', sans-serif;
+  font-size: 28px;
+}
+
+.dropdown-content a {
+  border-bottom: 1px solid lightgray;
+  color: green;
 }
