--- a/src/Components/SearchForm/SearchForm.css
+++ b/src/Components/SearchForm/SearchForm.css
@@ -29,12 +29,13 @@ input{
     border: 0;
   outline: 0;
   background: transparent;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid grey;
   padding-bottom: 5px;
 }
 
 select {
-    border: 1px solid black;
+    background: none;
+    height: 30px;
 }
 
 select:hover{
