--- a/src/App.css
+++ b/src/App.css
@@ -33,15 +33,42 @@ section .why-window, .business-window, .consumer-window{
   margin: auto;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   width: 65%;
-  height: 400px;
-  padding-bottom: 30px;
+  height: 550px;
+  padding-bottom: 20%;
   padding-top: 10px;
   padding-right: 20px;
   padding-left: 20px;
 }
 
-section .consumer-window, .business-window{
-  height: 480px;
+ section .consumer-window{
+  padding-bottom: 40%;
+}
+
+section .business-window{
+  padding-bottom: 40%;
+}
+
+@media only screen and (min-width: 400px ){
+  section .why-window{
+      padding-bottom: 5%;
+  }
+  section .consumer-window{
+    padding-bottom: 7%;
+  }
+  section .business-window{
+    padding-bottom: 20%;
+  }
+}
+@media only screen and (min-width: 700px ){
+  section .why-window{
+      padding-bottom: 0;
+  }
+  section .consumer-window{
+    padding-bottom: 0;
+  }
+  section .business-window{
+    padding-bottom: 5%;
+  }
 }
 
 section .why-background-image, .consumer-background-image, .business-background-image{
