--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:800');
 
 header {
-    height: 400px;
+    height: 500px;
     padding-top: 9%;
-    margin-top: 50px;
+    margin-top: 16%;
     padding-bottom: 5%;
     font-family: 'Open Sans', sans-serif;
     color: white;
@@ -11,4 +11,19 @@ header {
     background-image: url('../../Images/farmersmarket.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+@media only screen and (min-width: 550px ){
+    header{
+        margin-top: 10%
+    }
+}
+@media only screen and (min-width: 950px ){
+    header{
+        margin-top: 7%
+    }
+}
+
+header h1, h3 {
+    margin-top: 30px;
 }
