--- a/src/Components/Results/ResultsPage.css
+++ b/src/Components/Results/ResultsPage.css
@@ -7,8 +7,18 @@ header {
   display: block;
   padding-bottom: 2%;
   background-color: white;
-  margin-top: 10%;
+  margin-top: 18%;
   padding-bottom: 3%;
+}
+@media only screen and (min-width: 550px ){
+  .results-section {
+      margin-top: 10%
+  }
+}
+@media only screen and (min-width: 800px ){
+  .results-section {
+      margin-top: 5%
+  }
 }
   
 .results {
