--- a/src/App.css
+++ b/src/App.css
@@ -23,21 +23,6 @@ body {
   flex-direction: column;
 }
 
-/* 
-.Site-content{
-  flex: 1 0 auto;
-  padding: var(--space) var(--space) 0;
-  width: 100%;
-}
-
-.Site-content:after {
-  content: '\00a0';
-  display: block;
-  margin-top: var(--space);
-  height: 0;
-  visibility: hidden;
-} */
-
 section {
   min-height: 200px;
   padding: 6% 0;
@@ -106,4 +91,9 @@ section .consumer-background-image{
 section .business-background-image{
   background-image: url('./Images/fisheries.jpg');
   background-size: cover;
+}
+
+.footer{
+  width: 100%;
+  height: 300px;
 }
