--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:800');
 
 header {
+    display: table;
+    width: 100%;
+    margin: 0 auto;
     height: 500px;
     padding-top: 9%;
     margin-top: 16%;
@@ -11,6 +14,12 @@ header {
     background-image: url('../../Images/farmersmarket.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    z-index: 0;
+    animation: imageAnimation 36s linear infinite 0s; 
+
+    &:after{
+        content: 
+}
 }
 
 @media only screen and (min-width: 550px ){
