--- a/src/Components/Results/ResultsPage.css
+++ b/src/Components/Results/ResultsPage.css
@@ -22,18 +22,17 @@ header {
 }
   
 .results {
+  position: absolute;
   margin-bottom: 80px;
-  width: 100%;
-  overflow: hidden;
+  width: 30%;
+  overflow-y: auto;
+  height: 620px;
+  background: white;
 }
 
 .ResultsList{
-  margin: auto;
-  width: 80%;
-  height: 400px;
-  overflow-y: auto;
-  border-top: 1px solid lightgrey;
-  margin-bottom: 5px;
+  width: 30%;
+  
 }
 
 .results ul {
@@ -60,4 +59,14 @@ header {
 
 .results a:hover{
   text-decoration: underline;
+}
+
+.results-list-map{
+  position: relative;
+}
+
+.map{
+  width: 100%;
+  height: 100%;
+  /* top: 100px; */
 }
