--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -12,17 +12,16 @@
 
 #newEmail {
     background: white;
+    border: none;
     border-radius: 20px;
     padding-left: 13px;
-    padding-right: 13px;
+    padding-right: 85px;
     padding-top: 5px;
     padding-bottom: 5px;
     height: 30px;
-    width: 200px;
+    width: 250px;
     margin-top: 15%;
-}
-.email-button {
-    background: white;
+
 }
 
 @media only screen and (min-width: 550px ){
@@ -50,7 +49,28 @@
     }
 }
 
-
 .ok-message{
     padding-top: 2px
+}
+
+.email-button {
+    color: grey;
+    font-size: 13px;
+    position: absolute;
+    border: none;
+    border-radius: 20px;
+    height: 30px;
+    right: 75px;
+    bottom: 0;
+    -webkit-transition: all ease 0.8s;
+	-moz-transition: all ease 0.8s;
+	transition: all ease 0.8s;
+}
+.email-button:hover{
+    box-shadow: inset 100px 0 0 0 #eeb4b4;
+}
+
+.email-form{
+    position: relative;
+    display: inline-flex;
 }
