--- a/src/Components/Results/ResultsPage.css
+++ b/src/Components/Results/ResultsPage.css
@@ -32,7 +32,6 @@ header {
 
 .ResultsList{
   width: 30%;
-  
 }
 
 .results ul {
@@ -68,5 +67,8 @@ header {
 .map{
   width: 100%;
   height: 100%;
-  /* top: 100px; */
+}
+
+.item-name{
+  font-weight: bold;
 }
