--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,9 +1,8 @@
 .footer{
     width: 100%;
-    height: 500px;   
+    height: 600px;   
     background-image: url('../../Images/Fresh-meal.jpg');
     background-size: cover;
-    /* background-position: top; */
 }
 
 .email{
@@ -60,12 +59,23 @@
     border: none;
     border-radius: 20px;
     height: 30px;
-    right: 75px;
+    right: 40px;
     bottom: 0;
     -webkit-transition: all ease 0.8s;
 	-moz-transition: all ease 0.8s;
 	transition: all ease 0.8s;
 }
+@media only screen and (min-width: 360px ){
+    .email-button{
+        right: 60px;
+    }
+}
+@media only screen and (min-width: 400px ){
+    .email-button{
+        right: 75px;
+    }
+}
+
 .email-button:hover{
     box-shadow: inset 100px 0 0 0 #eeb4b4;
 }
