--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Lato');
+
 .footer{
     width: 100%;
     height: 600px;   
@@ -67,12 +69,12 @@
 }
 @media only screen and (min-width: 360px ){
     .email-button{
-        right: 60px;
+        right: 55px;
     }
 }
 @media only screen and (min-width: 400px ){
     .email-button{
-        right: 75px;
+        right: 68px;
     }
 }
 
@@ -83,4 +85,9 @@
 .email-form{
     position: relative;
     display: inline-flex;
+    
+}
+
+.email-form label, .ok-message{
+    font-family: 'Lato', sans-serif;
 }
