--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -6,20 +6,21 @@ nav {
   justify-content: space-between;
   position: fixed;
   background-color: #F7EFE6;
-  height: 11%;
+  height: 60px;
   top: 0;
   left: 0;
   right: 0;
   z-index: 10;
+  transition: top 0.3s; /* Transition effect when sliding down (and up) */
+}
+@media only screen and (min-width: 480px ){
+  nav{
+      height: 80px;
+  }
 }
 @media only screen and (min-width: 1000px ){
   nav{
-      height: 13%;
-  }
-}
-@media only screen and (min-width: 1200px ){
-  nav{
-      height: 16%;
+      height: 100px;
   }
 }
 .home {
@@ -27,24 +28,34 @@ nav {
 }
 
 .nav-link{
-  margin-top: 2.5%;
+  margin-top: 15px;
   margin-left: 2%;
+}
+@media only screen and (min-width: 500px ){
+  .nav-link{
+    margin-top: 25px;
+  }
 }
 
 .dropdown {
   float: right;
   overflow: hidden;
-  margin-right: 20px;
-  margin-top: 0.8%;
+  margin-right: 2%;
 }
 
 .dropdown .dropbtn {
-  font-size: 16px; 
+  font-size: 18px;
+  margin-top: 27px; 
+  color: grey;
   border: none;
   outline: none;
-  color: darkgray;
   background-color: inherit;
   font-family: inherit; /* Important for vertical align on mobile phones */
+}
+@media only screen and (min-width: 500px ){
+  .dropdown .dropbtn {
+    margin-top: 35px;
+  }
 }
 
 /* Dropdown content (hidden by default) */
@@ -63,7 +74,7 @@ nav {
 }
 
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: transparent;
 }
 
 .dropdown:hover .dropdown-content {
