--- a/src/Components/SearchForm/SearchForm.css
+++ b/src/Components/SearchForm/SearchForm.css
@@ -3,7 +3,7 @@
     padding: 12px 12px;
 }
 
-button{
+.search-button{
     display: block;
     margin: auto;
     margin-top: 10px;
@@ -20,7 +20,7 @@ button{
 	transition: all ease 0.8s;
 }
 
-button:hover{
+.search-button:hover{
     cursor: pointer;
     box-shadow: inset 100px 0 0 0 #eeb4b4;
 }
