--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -79,7 +79,7 @@
 }
 
 .email-button:hover{
-    box-shadow: inset 100px 0 0 0 #eeb4b4;
+    box-shadow: inset 100px 0 0 0 #83C17A;
 }
 
 .email-form{
