--- a/src/Components/SearchForm/SearchForm.css
+++ b/src/Components/SearchForm/SearchForm.css
@@ -22,7 +22,7 @@
 
 .search-button:hover{
     cursor: pointer;
-    box-shadow: inset 100px 0 0 0 #eeb4b4;
+    box-shadow: inset 100px 0 0 0 #83C17A;
 }
 
 .search-form{
