--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -6,11 +6,10 @@ header {
     width: 100%;
     margin: 0 auto;
     height: 600px;
-    margin-top: 5%;
     padding-bottom: 5%;
     font-family: 'Montserrat', sans-serif;
     font-weight: lighter;
-    font-size: 25px;
+    font-size: 20px;
     color: white;
     font-weight: bold;
 }
@@ -19,10 +18,23 @@ header {
     background-image: url('../../Images/farmersmarket.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    margin-top: 10%;
+}
+@media only screen and (min-width: 730px ){
+    .header-home-page{
+        margin-top: 8%;
+    }
+}
+@media only screen and (min-width: 100px ){
+    .header-home-page{
+        margin-top: 6%;
+    }
 }
 
 .header-consumer-page, .header-business-page, .header-why-page{
+    position: relative;
     background-image: url('../../Images/table.jpg');
+    background-position: top right -100px;
     background-repeat: no-repeat;
     background-size: cover;
     height: 650px;
@@ -31,9 +43,28 @@ header {
 .header-consumer-page .title, .header-business-page .title, .header-why-page .title{
     font-family: 'Montserrat', sans-serif;
     font-weight: lighter;
-   margin-left: 50px;
+    margin-left: 20px;
+    margin-top: 7%;
     color: #118F00;
 }
 header h1{
-    margin-top: 50px;
+    margin-top: 35px;
+}
+.header-consumer-page h1, .header-business-page h1, .header-why-page h1{
+    position: absolute;
+    bottom: 200px;
+}
+
+@media only screen and (min-width: 800px ){
+    .header-consumer-page, .header-business-page, .header-why-page{
+        background-position: 20% 0%;
+
+    }
+    .header-consumer-page h1, .header-business-page h1, .header-why-page h1{
+        top: 100px;
+        left: 80px;
+        font-size: 60px;
+        width: 70%;
+    }
+
 }
