--- a/src/Components/InfoSection/InfoSection.css
+++ b/src/Components/InfoSection/InfoSection.css
@@ -1,7 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lora');
 
-
-
 h1, h4, p, .consumer-how-page li, .business-how-page li{
   font-family: 'Lora', serif;
 }
@@ -9,7 +7,6 @@ h1, h4, p, .consumer-how-page li, .business-how-page li{
 .consumer-how-page li, .business-how-page li{
   list-style: none;
   font-size: 15px;
-
 }
 
 .why-page, .consumer-how-page, .business-how-page{
@@ -27,9 +24,19 @@ h1, h4, p, .consumer-how-page li, .business-how-page li{
 
 .content{
   background-color: #F7EFE6;
-  height: 630px;
+  height: 90%;
   padding-left: 45px;
   padding-right: 45px;
+}
+@media only screen and (min-width: 600px ){
+  .content{
+    height: 700px;
+  }
+}
+@media only screen and (min-width: 1000px ){
+  .content{
+    height: 550px;
+  }
 }
 
 .list-name{
