--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -25,9 +25,12 @@ header {
         margin-top: 8%;
     }
 }
-@media only screen and (min-width: 100px ){
+@media only screen and (min-width: 1000px ){
     .header-home-page{
         margin-top: 6%;
+    }
+    .header-home-page h1{
+        font-size: 60px;
     }
 }
 
