--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Noto+Serif+JP');
 @import url('https://fonts.googleapis.com/css?family=Lora');
 
-nav {
+/* nav {
   display: flex;
   justify-content: space-between;
   position: fixed;
@@ -12,11 +12,39 @@ nav {
   left: 0;
   right: 0;
   z-index: 10;
-  transition: top 0.3s; /* Transition effect when sliding down (and up) */
+  transition: top 0.3s; /* Transition effect when sliding down (and up) 
+} */
+
+
+.nav-link {
+  float: left;
 }
-@media only screen and (min-width: 480px ){
+
+.links_right {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-start;
+}
+
+.logout_link {
+  margin-top: 33px;
+  font-family: 'Lora', serif;
+  font-size: 16px;
+  margin-right: 30px;
+}
+
+.link {
+  color: grey;
+}
+
+
+
+@media only screen and (max-width: 500px ){
   nav{
       height: 80px;
+  }
+  .logout_link{
+    margin-top: 23px;
   }
 }
 @media only screen and (min-width: 1000px ){
